fixed button redirecting to pdfs

--- a/stories/destructionofearth.html
+++ b/stories/destructionofearth.html
@@ -17,7 +17,7 @@
                     Follow two university students as they attempt to save the world by making a time machine.<br><br>
                     Genre: Science Fiction
                 </p>
-                <button onclick="newTab('pdfs/thedestructionofearth.pdf')">Read</button>
+                <button onclick="window.location.href = 'pdfs/thedestructionofearth.pdf'">Read</button>
             </section>
         </main>
     </body>
