--- a/stories/redpandawithbrownhair.html
+++ b/stories/redpandawithbrownhair.html
@@ -17,7 +17,7 @@
                     A 14 year old girl has a crush on another girl at her school and<br>wants to ask her a few questions about life, the universe, and   everything.<br>But first she has to come out of the bushes.<br><br>
                     Genre: Romance
                 </p>
-                <button onclick="newTab('pdfs/redpandawithbrownhair.pdf')">Read</button>
+                <button onclick="window.location.href = 'pdfs/redpandawithbrownhair.pdf'">Read</button>
             </section>
         </main>
     </body>
