--- a/stories/samandgreta.html
+++ b/stories/samandgreta.html
@@ -18,8 +18,8 @@
                     miraculously find<br>each other when one is captured as a POW.<br><br>
                     Genre: Romance
                 </p>
-                <button onclick="newTab('pdfs/sam&greta/samandgreta.pdf')" class="samAndGreta">Read Book 1</button>
-                <button onclick="newTab('pdfs/sam&greta/thebritisharmy.pdf')" class="samAndGreta">Read Book 2</button>
+                <button onclick="window.location.href = 'pdfs/sam&greta/samandgreta.pdf'" class="samAndGreta">Read Book 1</button>
+                <button onclick="window.location.href = 'pdfs/sam&greta/thebritisharmy.pdf'" class="samAndGreta">Read Book 2</button>
             </section>
         </main>
     </body>
