--- a/stories/theinvisiblegirl.html
+++ b/stories/theinvisiblegirl.html
@@ -17,7 +17,7 @@
                     Read this gentle, understanding story about the "invisible" Phoebe and<br>her developing friendship and love.<br><br>
                     Genre: Romance
                 </p>
-                <button onclick="newTab('pdfs/theinvisiblegirl.pdf')">Read</button>
+                <button onclick="window.location.href = 'pdfs/theinvisiblegirl.pdf'">Read</button>
             </section>
         </main>
     </body>
