--- a/stories/theknifewithagirl.html
+++ b/stories/theknifewithagirl.html
@@ -17,7 +17,7 @@
                     Follow the story of a young girl trying to get along in life while commiting<br>what appears to be random mass-murders.<br><br>
                     Genre: Fantasy
                 </p>
-                <button onclick="newTab('pdfs/theknifewithagirl.pdf')">Read</button>
+                <button onclick="window.location.href = 'pdfs/theknifewithagirl.pdf'">Read</button>
             </section>
         </main>
     </body>
